GNOME Bugzilla – Bug 746253
has-tooltip property interferes with event-compression
Last modified: 2015-03-25 02:14:50 UTC
Created attachment 299460 [details] Demonstration of bug How to reproduce bug: Suppose I have a widget that requires turning OFF event compression for pointer motion. However, I would like to have tooltips for this widget too. If I set has-tooltip to TRUE, it turns on POINTER_MOTION_HINT_MASK which messes with event-compression. Results: * Mouse motion events are not even received at the widget Expected results: * Mouse motion events should still be received at the widget -- at the high rate for the widget's event handler, and at a low rate for the tooltip.
Thanks for reporting this. Which GTK version was this tested with?
Version is 3.14.9 (the version that comes with Fedora 21)
Created attachment 300060 [details] [review] Stop using GDK_POINTER_MOTION_HINT_MASK in widgets It is deprecated and no longer needed, and,as observed in https://bugzilla.gnome.org/show_bug.cgi?id=746253 it interferes with turning off event compression.
Review of attachment 300060 [details] [review]: .