Stop using GDK_POINTER_MOTION_HINT_MASK in widgets

It is deprecated and no longer needed, and,as observed in
https://bugzilla.gnome.org/show_bug.cgi?id=746253 it
interferes with turning off event compression.