gtk/gtklabel.c
@@ -5357,8 +5357,7 @@ gtk_label_create_window (GtkLabel *label)
     GDK_BUTTON_RELEASE_MASK      |
     GDK_LEAVE_NOTIFY_MASK        |
     GDK_BUTTON_MOTION_MASK       |
-    GDK_POINTER_MOTION_MASK      |
-    GDK_POINTER_MOTION_HINT_MASK;
+    GDK_POINTER_MOTION_MASK;
   attributes_mask = GDK_WA_X | GDK_WA_Y | GDK_WA_NOREDIR;
   if (gtk_widget_is_sensitive (widget) && priv->select_info && priv->select_info->selectable)
     {
